     hues are still too dark.

     These improvements should apply to other printers using
     UltraChrome inks (Stylus Pro 7600 and 9600).

   * The Stylus Color 680/777 ink drop sizes at 720 DPI have been
     adjusted.

3) Preliminary support for the Sony UP-DP10 has been added, including
   the laminate pattern feature.

4) Olympus and Olympus-compatible printers have been color-tuned.

5) Preliminary support for the Epson Stylus C84.

6) Margins for the Epson Stylus C70, C80, and C82 have been
   corrected.

7) The Postscript driver now produces proper alignment on the page
   (bug 802621).


Gimp-Print 4.3.20 contains the following major changes over Gimp-Print
4.3.19:

1) This release offers major improvements in color fidelity,
   particularly for Epson printers.  In particularly, some transition
   artifacts have been eliminated, the color gamut is improved, and
   cyan, magenta, red, and green colors are notably better.  There is
   also considerably better (although not perfect) matching between
   different Epson printers.

   The HSL-Adjusted color correction mode has been eliminated; its
   functionality has been completely subsumed under High Accuracy.
   Previously, the HSL-Adjusted color correction mode simply performed
   part of the correction in order to offer more gamut.

   The Bright Colors mode now offers considerably more accurate colors
   and tonality than previously, while still offering maximum color
   saturation for brilliant colors.

   If you have created profiles for use with Gimp-Print, you will need
   to create new ones.  It is currently anticipated that the current
   color correction will be more stable, with fewer changes, but we
   can't guarantee that there will not be further improvements.  In
   particular, it is possible that the High Accuracy mode is too
   saturated (overly vivid colors) on some printers.

   Other printer families have not been tuned and are using generic